# shiny-octo-pancake

./: README.md
1_Lab/: README.md
1_Lab/First_program/: README.md  my_first_app.ipynb  my_first_app.py
2_Lab/: README.md  main.ipynb
3_Lab/: README.md  notebook.ipynb  task.py
4_lab/: README.md  classes.ipynb
5_lab/: README.md  notebook.ipynb
6_lab/: Pipfile  README.md  anime.py  p.ipynb  test.py
6_lab/myproject/: app.py  pyproject.toml
7_lab/: README.md
7_lab/notes/06_python_agents/: pyproject.toml
7_lab/notes/06_python_agents/code_pipeline/: agent.py
7_lab/notes/06_python_agents/code_pipeline/.adk/: session.db
7_lab/notes/06_python_agents/conversation_agent/: agent.py
7_lab/notes/06_python_agents/conversation_agent/.adk/: session.db
7_lab/notes/06_python_agents/creative_writer/: agent.py
7_lab/notes/06_python_agents/creative_writer/.adk/: session.db
7_lab/notes/06_python_agents/culinary_expert/: agent.py
7_lab/notes/06_python_agents/math_agent/: agent.py
7_lab/notes/06_python_agents/math_agent/.adk/: session.db
7_lab/notes/06_python_agents/my_first_agent/.adk/: session.db
7_lab/notes/06_python_agents/stateful_agent/: agent.py  user_state.json
7_lab/notes/06_python_agents/stateful_agent/.adk/: session.db
7_lab/notes/06_python_agents/student_helper/: agent.py
7_lab/notes/06_python_agents/student_helper/.adk/: session.db
7_lab/notes/06_python_agents/tools/: common_tools.py
init/: README.md
